Production/Production/src/objects/Radian6_Case_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Get_Next_Unauthorised__c</fullName>
        <description>Message displayed to users who are not authorised to use the Get Next button</description>
        <label>Get Next Unauthorised</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Cases_Available__c</fullName>
        <description>Alert displayed when no cases are found</description>
        <label>No Cases Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radian_6_Profiles__c</fullName>
        <description>Comma Separated Profile Ids who are permitted to use the Get Next Button</description>
        <label>Radian 6 Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radian_6_Queues__c</fullName>
        <description>Comma Separated List of Radian 6 Queues</description>
        <label>Radian 6 Queues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Radian6 Case Config</label>
</CustomObject>